Replace goamz with aws-sdk-go
This is a direct rewrite using aws-sdk-go.
Some minor tweaks:
* rexray now picks AWS credentials from all known places (environment,
  ~/.aws/credentials and EC2 instance profile)
* volume attach - API call _requires_ presence of instanceID.
  If missing, RexRay nevertheless passes null instance ID to AWS getting an error.
  Now driver's EC2 instance ID is used, if none provided.
* snapshot copy - as with volume attach, destinationregion is mandatory. And if its omitted,
  AWS returns an error. And as with volume copy, driver's EC2 instance region is used as default

Everything else should work as before

Functional tests are passed

Signed-off-by: Eugene Chupriyanov <tchu@tchu.ru>
Signed-off-by: Eugene Chupriyanov <e.chupriyanov@cpm.ru>
Signed-off-by: Eugene Chupriyanov <tchu@tchu.ru>

--- a/glide.yaml
+++ b/glide.yaml
@@ -19,9 +19,9 @@ import:
     ref:     support/rexray
     repo:    https://github.com/akutz/viper.git
     vcs:     git
-  - package: github.com/goamz/goamz
-    ref:     5c85623a00092be41b679e53ef47772cf8ded1da
-    repo:    https://github.com/clintonskitson/goamz
+  - name:    github.com/aws/aws-sdk-go
+    ref:     aac89266a9bc98ecbf440bb675e9dc95a94d8dc6
+    repo:    https://github.com/aws/aws-sdk-go.git
     vcs:     git
   - package: github.com/emccode/goscaleio
     ref:     37a71bf801a533473f94e4d4dcee2372c141e261
